Added scan to email from json file
